--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list application</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/to-do-application/style/style.css">
   </head>
   <body>
     <h1> Todo List</h1>
@@ -19,6 +19,6 @@
       <button type="button" onclick="createTodo()">Add</button>
       <button type="button" onclick="deleteTodos()">Delete all</button>
     </div>
-    <script src="script.js"></script>
+    <script src="/to-do-application/script/script.js"></script>
   </body>
 </html>
